--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -8,7 +8,7 @@ RM			= rm -rf
 
 OBJS_DIR	= bin
  
-SRCS		= Array.cpp main.cpp
+SRCS		= main.cpp
 OBJS		= $(patsubst %.cpp, $(OBJS_DIR)/%.o, $(SRCS))
 
 # **************************************************************************** #
